--- a/pages/blog/generated-color-palettes.mdx
+++ b/pages/blog/generated-color-palettes.mdx
@@ -420,7 +420,7 @@ As you might see, the HSLuv implementation is much better at keeping consistency
 
 Still, according to personal preference, some optical adjustments might be needed. For example, HSLuv tends to remove too much saturation and makes some colors look dull.
 
-For some scenarios, it might make sense to sacrifice some uniformity in the contrast dimension in pro of having more saturated colors. This tradeoff might make sense for some cases and not for others, so it's impossible for a fully automated tool to make this kind of judgements.
+For some scenarios, it might make sense to sacrifice some uniformity in the contrast dimension in pro of having more saturated colors. This tradeoff might make sense for some cases and not for others, so it's impossible for a fully automated tool to make this kind of judgments.
 
 <BigText>
 
@@ -428,10 +428,12 @@ HSLuv makes reasoning about color, and doing "math" with colors, a much more int
 
 </BigText>
 
-If you're interested in start using HSLuv in your workflow, you might be interested in this tools:
+---
+
+Links of interest:
 
 - [HSLuve Figma plugin](https://www.figma.com/community/plugin/811341846366740536/HSLuve) displays an HSLuv color selector inside Figma.
-- [Chromatic Figma plugin](https://www.figma.com/community/plugin/759433498184507623/Chromatic-Figma) to create perceptually uniform gradients between two colors.
+- [Chromatic Figma plugin](https://www.figma.com/community/plugin/759433498184507623/Chromatic-Figma) fix gradients to achieve perceptual uniformity.
 - [postcss-plugi-hsluv](https://www.npmjs.com/package/postcss-plugin-hsluv) brings HSLuv to PostCSS.
 - [hsluv-sass](https://www.npmjs.com/package/hsluv-sass) brings HSLuv to Sass
 - [hsluv-stylus](https://www.npmjs.com/package/hsluv-stylus) brings HSLuv to Stylus
